--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -54,13 +54,21 @@
           </div>
 
           <br />
-          <p>Pour bouger le joueur 1 utilisez les touches:</p>
-          <img src="assets/pl1.PNG" height="100" width="150" title="touchesp1">
-          <br />
+          <div class="row">
+            <div class="col">
+                <div class="row">
+                    <p>Pour bouger le joueur 1 utilisez les touches:</p>
+                    <p>Avancer: <kbd>S</kbd> <br /> Reculer: <kbd>X</kbd> <br /> Tourner à gauche: <kbd>W</kbd> <br /> Tourner à droite: <kbd>C</kbd> <br /> Attaquer: <kbd>D</kbd> </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <p>Pour bouger le joueur 2 utilisez les touches:</p>
+                    <p>Avancer: <kbd>G</kbd> <br /> Reculer: <kbd>B</kbd> <br /> Tourner à gauche: <kbd>V</kbd> <br /> Tourner à droite: <kbd>N</kbd> <br /> Attaquer: <kbd>H</kbd> </p>
+                </div>
+            </div>
+        </div>
 
-
-          <p>Pour bouger le joueur 2 utilisez les touches:</p>
-          <img src="assets/pl2.PNG" height="100" width="150" title="touchesp2">
           <br />
 
           <p>Lors du début d'un niveau, il faut tourner la roulette qui choisit une catégorie et une question au hazard.</p>
@@ -70,11 +78,20 @@
             Touches pour répondre aux questions (en ordre: Réponse1 Réponse2 Réponse3)
         </p>
         <br />
-        <p>Joueur 1 : </p>
-        <img src="assets/aze.PNG" height="50" width="150" title="AZE">
-        <br />
-        <p>Joueur 2 : </p>
-        <img src="assets/iop.PNG" height="50" width="150" title="IOP">
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <p>Joueur 1 : </p>
+                    <p>Pour la réponse 1: <kbd>A</kbd> <br /> Pour la réponse 2: <kbd>Z</kbd> <br /> Pour la réponse 3: <kbd>E</kbd> </p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <p>Joueur 2 : </p>
+                    <p>Pour la réponse 1: <kbd>I</kbd> <br /> Pour la réponse 2: <kbd>O</kbd> <br /> Pour la réponse 3: <kbd>P</kbd> </p>
+                </div>
+            </div>
+        </div>
         <br />
         <p>
             A la fin de chaque niveau il y aura un gagnant. Après les 5 niveaux, celui avec le plus des niveaux gagnés est nomé le gagnant de la partie.
