--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -9,17 +9,17 @@
         <br />
         <h1> Voici les regles du jeu</h1>
         <br />
-        <p>2 joueurs sur un même ordinateur</p>
+        <p>Quizzable peut être joué par 2 utilisateurs sur un même ordinateur.</p>
         <p>Chaque joueur introduit son nom avant de demarrer la partie.</p>
         <br />
-        <p>Une fois la partie démarré, vous allez voir plusieurs éléments apparaître:</p>
+        <p>Une fois la partie démarrée, vous allez voir plusieurs éléments apparaître:</p>
         <br />
 
         <div class="row">
             <div class="col">
                 <div class="row"> 
                     <div>
-                        <p>Avatar Joueur 1 : </p>
+                        <p>Avatar Joueur1 : </p>
                         <img src="assets/player1.PNG" height="170" width="100" title="j1">
                         <br />
                     </div>
@@ -32,7 +32,7 @@
             <div class="col" >
                 <div class="row" >
                     <div>
-                        <p>Avatar Joueur 2 : </p>
+                        <p>Avatar Joueur2 : </p>
                         <img src="assets/player2.PNG" height="180" width="100" title="j2">
                         <br />
                     </div>
@@ -44,7 +44,7 @@
             <div class="col" >
                 <div class="row" >
                     <div>
-                        <p>5 Niveaux du jeu : </p>
+                        <p>5 Niveaux du jeu: </p>
                     <img src="assets/niveau.PNG" height="150" width="150" title="niveau">
                     <br />
                     </div>
