--- a/src/app/rules/rules.component.html
+++ b/src/app/rules/rules.component.html
@@ -33,7 +33,7 @@
                 <div class="row" >
                     <div>
                         <p>Avatar Joueur2 : </p>
-                        <img src="assets/player2.PNG" height="180" width="100" title="j2">
+                        <img src="assets/player2.PNG" height="170" width="100" title="j2">
                         <br />
                     </div>
                 </div>
@@ -45,7 +45,8 @@
                 <div class="row" >
                     <div>
                         <p>5 Niveaux du jeu: </p>
-                    <img src="assets/niveau.PNG" height="150" width="150" title="niveau">
+                        <br/>
+                    <img src="assets/niveau.PNG" height="170" width="170" title="niveau">
                     <br />
                     </div>
                     
@@ -94,8 +95,10 @@
         </div>
         <br />
         <p>
-            A la fin de chaque niveau il y aura un gagnant. Après les 5 niveaux, celui avec le plus des niveaux gagnés est nomé le gagnant de la partie.
+            A la fin de chaque niveau il y aura un gagnant.<br /> Après les 5 niveaux, celui avec le plus des niveaux gagnés est nomé le gagnant de la partie.
         </p>
+        <br />
+        <h2>Bonne chance!</h2>
         <br />
     </div>
     </div>
