--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -6,7 +6,7 @@
 }
 body{
     margin:0;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;;
     font-size: 20px;
     color: #000000;
     line-height:1.6;
